tests/macro_read/unknown_attribute.stderr
error: Unknown field: `a`
 --> $DIR/unknown_attribute.rs:4:8
  |
4 | #[deku(a)]
  |        ^

error: Unknown field: `a`
 --> $DIR/unknown_attribute.rs:9:12
  |
9 |     #[deku(a = 1)]
  |            ^^^^^

error: Unknown field: `a`
  --> $DIR/unknown_attribute.rs:14:8
   |
14 | #[deku(a(a))]
   |        ^^^^

error: Unknown field: `a`
  --> $DIR/unknown_attribute.rs:19:12
   |
19 |     #[deku(a = "1")]
   |            ^^^^^^^

error: Unknown field: `a`
  --> $DIR/unknown_attribute.rs:25:14
   |
25 |     A(#[deku(a = "1")] u8),
   |              ^^^^^^^

error: Unknown field: `a`
  --> $DIR/unknown_attribute.rs:31:16
   |
31 |         #[deku(a = "1")]
   |                ^^^^^^^
